0.2102
    - fixed bug that DBIx::Custom::Model count method don't receive model's
      attribute
0.2101
    - fixed small default_bind_filter bug
    - micro optimization
    - select method can receive odd number argument. In that case first argument
      is column option.
    - fixed update_or_insert bug that when parameter don't contain any key-value
      this method throw exception.
0.2100
    - micro optimization
    - DBIx::Custom::Query is DEPRECATED!
0.1747
    - fixed bug DBIx::Custom::Result fetch_hash_multi throw warnings
      which cannnot fetch any more
    - fixed bug DBIx::Custom::Result fetch_hash_multi throw warnings
      which cannnot fetch any more
0.1746
    - micro optimization
0.1745
    - DBIx::Custom::Order prepend method receiving array reference
      is DEPRECATED!
    - DBIx::Custom::QueryBuilder class is DEPRECATED!
    - added DBIX_CUSTOM_DISABLE_MODEL_EXECUTE environment variable
    - added DBIX_CUSTOM_TAG_PARSE environment variable
    - tag_parse attribute is DEPRECATED! 
    - show_datatype method return lower case string
    - show_typename method return lower case string
    - DBIx::Custom::Result filter_on method is DEPRECATED!
    - DBIx::Custom::Result filter_off method is DEPRECATED!
0.1744
    - id option work if id count is lower than primary key count.
    - removed EXPERIMETNAL status from update_or_insert method and
      DBIx::Custom::Model's update_or_insert method
    - removed EXPERIMENTAL status from reuse option
    - removed EXPERIMENTAL status from update_at option and created_at option
    - removed EXPERIMETNAL status from now attribute
0.1743
    - DBIx::Custom::Model execute method is DEPRECATED!
    - fixed bug that update_all can't receive parameter as first argument
    - fixed bug that delete_all can't receive parameter as first argument
    - fixed where clause parsing bug when time(like 00:00:00) contain
0.1742
    - fixed update_or_insert method bug
    - micro optimization
0.1741